--- a/dome3/asset/style.css
+++ b/dome3/asset/style.css
@@ -15,3 +15,7 @@ html,body{ padding: 0; margin: 0; position: relative;}
      70%{ transform:rotate(90deg);}
      90%{ transform:rotate(0deg);}
  }
+
+ .table{ position: fixed; top:0; left: 0; width: 100%; height: 50px; color: #fff; list-style: none; margin: 0; padding: 0; overflow: hidden; display: none;}
+ .table li{ width: 25%; float: left; text-align: center; padding: 2% 0 0;}
+ .table li span{ display: block;}
