--- a/dome3/asset/style.css
+++ b/dome3/asset/style.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 html,body{ padding: 0; margin: 0; position: relative;}
+#mylegend{ position: relative; height: 100%; }
 #mylegend canvas{ background: #fff;}
 .cover{ position: fixed; top:0; left: 0; width: 100%; height: 100%; display: none; }
 .cover .center{ height:100%; background: #ccc; text-align: center; padding-top: 20%; }
@@ -16,6 +17,6 @@ html,body{ padding: 0; margin: 0; position: relative;}
      90%{ transform:rotate(0deg);}
  }
 
- .table{ position: fixed; top:0; left: 0; width: 100%; height: 50px; color: #fff; list-style: none; margin: 0; padding: 0; overflow: hidden; display: none;}
- .table li{ width: 25%; float: left; text-align: center; padding: 2% 0 0;}
- .table li span{ display: block;}
+#table{ position: fixed; top:0; left: 0; width: 100%; height: 50px; color: #fff; list-style: none; margin: 0; padding: 0; overflow: hidden; display: none;}
+#table li{ width: 25%; float: left; text-align: center; padding: 2% 0 0;}
+#table li span{ display: block;}
